# CrossQL

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yaml  package.json  tailwind.config.js  vite.config.js  walkthrough-current-condition.md.complete
crossql-engine/: Cargo.toml
crossql-engine/src/: lib.rs  main.rs
crossql-engine/src/connector/: mod.rs
crossql-engine/src/executor/: chunk.rs  dag.rs  engine.rs  join.rs  mod.rs  runner.rs  sink.rs
crossql-engine/src/server/: metrics.rs  mod.rs
crossql-engine/src/storage/: jobs.rs
crossql-engine/tests/: test_executor_mysql.rs  test_executor_postgres.rs  test_job_queue.rs
crossql-shared/: Cargo.toml
crossql-shared/src/: lib.rs
monitoring/: prometheus.yml
src/: app.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  parquet_query.rs  pipeline_io.rs  run_manager.rs
src-tauri/src/connectors/: cassandra.rs  file.rs  mod.rs  mongodb.rs  mysql.rs  postgres.rs
src-tauri/src/engine/: mod.rs  pipeline.rs  schema.rs  transform.rs  types.rs
src-tauri/src/writer/: parquet.rs
src-tauri/tests/: parquet_query_test.rs  parquet_writer_test.rs  pipeline_engine_test.rs  pipeline_io_test.rs  schema_test.rs  transform_test.rs
src/lib/: types.ts  utils.ts
src/lib/components/: ConfigPanel.svelte  HomeScreen.svelte  PipelineCanvas.svelte  PipelineMetaForm.svelte  SendToEngineButton.svelte  SendToEngineButton.test.ts  SidebarPalette.svelte  Toast.svelte  Toast.test.ts  ToastHost.svelte  TypeBadge.svelte  sendToEngineLogic.ts  toastLogic.ts
src/lib/components/nodes/: CassandraSourceNode.svelte  CastNode.svelte  DerivedColumnNode.svelte  FileSourceNode.svelte  FilterNode.svelte  JoinNode.svelte  MongoSourceNode.svelte  MySQLSourceNode.svelte  OutputNode.svelte  PostgresSourceNode.svelte  RenameNode.svelte  SchemaMapNode.svelte  SelectNode.svelte
src/lib/engine/: serializePipeline.ts
src/lib/stores/: engineStore.test.ts  engineStore.ts  executionStore.svelte.ts  fileStore.svelte.ts  pipelineStore.svelte.ts  schemaStore.svelte.ts  toastStore.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/remote/: +page.svelte
