[package]
name = "crossql"
version = "0.1.0"
description = "crossql"
authors = ["adevshankar.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "crossql_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

polars = { version = "0.53.0", features = [
  "lazy", "parquet", "json", "dtype-datetime", "dtype-categorical", "strings", "regex", "sql"
] }

sqlx = { version = "0.8", features = [
  "postgres", "mysql", "runtime-tokio", "tls-rustls", "chrono", "uuid"
] }

mongodb = "3"
futures-util = "0.3"
cdrs-tokio = "9"

uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
thiserror = "1"
anyhow = "1"
sysinfo = "0.33"
